--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,12 +25,16 @@ dependencies:
   hive: ^2.2.3
   path_provider: ^2.1.4
   get_it: ^7.7.0
+  uuid: ^4.5.1
 
+  # excel
+  syncfusion_flutter_xlsio: ^27.1.50
   # language
   easy_localization: ^3.0.7
 
   # core utilities
   kartal: ^2.8.0
+  connectivity_plus: ^6.0.5
   #  equatable: ^2.0.5
   #  onesignal_flutter: ^3.5.1
 
@@ -38,6 +42,8 @@ dependencies:
   #  animations: ^2.0.7
   fluent_ui: ^4.9.1
   flutter_spinkit: ^5.2.1
+  syncfusion_flutter_charts: ^27.1.50
+  graphic: ^2.5.0
   menu_bar: ^0.5.3
   google_fonts:
   auto_size_text: ^3.0.0
