--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,8 @@ dependencies:
   easy_localization: ^3.0.7
 
   # core utilities
-  kartal: ^2.8.0
-  connectivity_plus: ^6.0.5
+  kartal: ^4.1.0
+  internet_connection_checker_plus: ^2.5.2
   #  equatable: ^2.0.5
   #  onesignal_flutter: ^3.5.1
 
